syntax = "proto3";
option go_package = "/vaultservpb";


package vaultservpb;

service Vault {
  rpc StoreCred (StoreCredRequest) returns (StoreCredResponse) {}
  rpc StoreSecret(StoreSecretRequest) returns (StoreSecretResponse) {}
}

message StoreSecretRequest {
  string name = 1;
  map<string,string> kubeconfig = 2;
}

message StoreCredRequest {
  string credname = 1;
  string username = 2;
  string password = 3;
}

message StoreCredResponse {
  string status = 1;
}
message StoreSecretResponse {
  string status = 1;
}

